# askup

./: .codeclimate.yml  .gitignore  .travis.yml  README.md  attach.sh  deploy-clean-dev.sh  deploy-clean-stage.sh  deploy-clean.sh  deploy-stage.sh  docker-compose.yml  init-dev-env.sh  init-django.sh  init-prod-env.sh  requirements.txt  requirements_dev.txt  run.sh  setup.cfg  start-server.sh  test.sh  tox.ini
.dc-dev/: .django.env  .env  .rabbit.env  docker-compose.yml
.dc-dev/nginx/conf.d/: localhost.conf
.dc-prod/: .django.env  .env  .rabbit.env  docker-compose.yml
.dc-prod/django/: Dockerfile
.dc-prod/nginx/conf.d/: askup.net.conf  example.com.conf
askup/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  views.py
askup/fixtures/: groups.json  mockup_data.json
askup/migrations/: 0001_initial.py  0002_auto_20180227_1703.py  0003_auto_20180316_1602.py  0004_auto_20180703_1730.py  0004_user.py  0005_auto_20180831_1034.py
askup/mixins/: admin.py  forms.py  tests.py  views.py
askup/static/assets/: application.css  application.js  application.min.js  hide_add_edit_icons.js
askup/utils/: general.py  models.py  tests.py  views.py
askup_lti/: admin.py  apps.py  models.py  provider.py  urls.py  validator.py
askup_lti/migrations/: 0001_initial.py
askup_lti/tests/: test_lti_provider.py
config/: celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  secure.py.example  secure_example.py  test.py
project/: settings.py  urls.py
(+63 files in other folders)
