[metadata]
name = askup
summary = Ask Up service
license = MIT
description-file =
    README.md
requires-python = >=3.6
classifier =
    Intended Audience :: Online Education
    Intended Audience :: Course Instructors
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: JavaScript
    Programming Language :: HTML


[files]
packages =
    askup
